--- a/css/style.css
+++ b/css/style.css
@@ -277,7 +277,7 @@ section#welcome-text-Nepal p {
 
 .slide-fourth {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(../images/travelimage.jpeg);
+    url(../images/visitor2.jpg);
 }
 
 .slide-fifth {
@@ -287,7 +287,7 @@ section#welcome-text-Nepal p {
 
 .slide-sixth {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(../images/childrenimg.jpg);
+    url(../images/visiter.jpg);
 }
 
 .slide-seventh {
